--- a/board_grupos.html
+++ b/board_grupos.html
@@ -211,109 +211,80 @@
         }
 
         .grid-display {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
         }
 
         .group-card {
             background: var(--bg-card);
             border: 1px solid var(--border);
-            border-radius: 20px;
-            padding: 1.5rem;
+            border-radius: 16px;
+            padding: 1rem 1.5rem;
             display: flex;
-            flex-direction: column;
-            gap: 1rem;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1.5rem;
             transition: var(--transition);
             position: relative;
         }
 
         .group-card:hover {
             border-color: var(--accent);
-            transform: translateY(-5px);
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+            background: rgba(56, 189, 248, 0.05);
+            transform: translateX(5px);
         }
 
-        .group-header {
+        .card-main {
             display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
+            align-items: center;
+            gap: 2rem;
+            flex-grow: 1;
         }
 
         .group-name {
-            font-size: 1.15rem;
+            font-size: 1rem;
             font-weight: 700;
             color: var(--text-main);
             font-family: 'Outfit', sans-serif;
-            word-break: break-all;
+            min-width: 200px;
         }
 
-        .group-tag {
-            background: var(--accent-glow);
-            color: var(--accent);
-            padding: 4px 10px;
-            border-radius: 8px;
-            font-size: 0.7rem;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
-        /* Day Grouping Styles */
-        .day-group {
-            margin-bottom: 3rem;
-        }
-
-        .day-header {
-            font-size: 0.85rem;
-            font-weight: 800;
-            text-transform: uppercase;
-            letter-spacing: 0.15rem;
-            color: var(--accent);
-            margin-bottom: 1.5rem;
+        .card-meta {
             display: flex;
             align-items: center;
-            gap: 1rem;
-        }
-
-        .day-header::after {
-            content: '';
-            flex-grow: 1;
-            height: 1px;
-            background: linear-gradient(90deg, var(--border), transparent);
-        }
-
-        .group-details {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1rem;
-            padding-top: 1rem;
-            border-top: 1px solid var(--border);
-        }
-
-        .detail-item {
-            display: flex;
-            flex-direction: column;
-            gap: 0.2rem;
-        }
-
-        .detail-label {
-            font-size: 0.65rem;
-            text-transform: uppercase;
+            gap: 1.5rem;
             color: var(--text-dim);
-            font-weight: 600;
         }
 
-        .detail-val {
+        .meta-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
             font-size: 0.85rem;
-            font-weight: 600;
+            font-weight: 500;
+        }
+
+        .meta-item svg {
+            width: 14px;
+            height: 14px;
+            opacity: 0.7;
+        }
+
+        .class-badge {
+            background: var(--accent-glow);
+            color: var(--accent);
+            padding: 6px 14px;
+            border-radius: 20px;
+            font-size: 0.75rem;
+            font-weight: 700;
+            white-space: nowrap;
+            border: 1px solid rgba(56, 189, 248, 0.2);
         }
 
         .delete-btn {
-            position: absolute;
-            top: 1.5rem;
-            right: 1.5rem;
-            background: rgba(244, 63, 94, 0.1);
-            color: #f43f5e;
+            background: transparent;
+            color: var(--text-dim);
             border: none;
             width: 32px;
             height: 32px;
@@ -322,17 +293,43 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            opacity: 0;
             transition: var(--transition);
+            opacity: 0.3;
         }
 
         .group-card:hover .delete-btn {
             opacity: 1;
+            color: #f43f5e;
         }
 
         .delete-btn:hover {
-            background: #f43f5e;
-            color: white;
+            background: rgba(244, 63, 94, 0.1);
+            color: #f43f5e !important;
+        }
+
+        /* Day Grouping Styles */
+        .day-group {
+            margin-bottom: 2rem;
+        }
+
+        .day-header {
+            font-size: 0.75rem;
+            font-weight: 800;
+            text-transform: uppercase;
+            letter-spacing: 0.1rem;
+            color: var(--text-dim);
+            margin-bottom: 1rem;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            padding-left: 0.5rem;
+        }
+
+        .day-header::after {
+            content: '';
+            flex-grow: 1;
+            height: 1px;
+            background: var(--border);
         }
 
         /* Modal Preview */
@@ -693,15 +690,28 @@
                     const card = document.createElement('div');
                     card.className = 'group-card';
                     const classCount = countMonthClasses(group.fecha, group.fecha_final, group.originalDia, selectedMonth, selectedYear);
+
                     card.innerHTML = `
-                        <button class="delete-btn" onclick="deleteGroup(${originalIndex})" title="Eliminar">×</button>
-                        <div class="group-header">
-                            <span class="group-name">${group.nombre}</span>
-                            <span class="group-tag" style="background: ${classCount > 0 ? 'var(--success)' : 'var(--text-dim)'}; color:#000">${classCount} clases (${displayMonthName.split(' ')[0]})</span>
+                        <div class="card-main">
+                            <span class="group-name" title="${group.nombre}">${group.nombre}</span>
+                            <div class="card-meta">
+                                <div class="meta-item">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+                                    ${formatTime(group.hora)}
+                                </div>
+                                <div class="meta-item">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
+                                    Vence: ${group.fecha_final || 'N/A'}
+                                </div>
+                            </div>
                         </div>
-                        <div class="group-details">
-                            <div class="detail-item"><span class="detail-label">Horario</span><span class="detail-val">${formatTime(group.hora)}</span></div>
-                            <div class="detail-item"><span class="detail-label">Vence</span><span class="detail-val">${group.fecha_final || 'N/A'}</span></div>
+                        <div style="display: flex; align-items: center; gap: 1rem;">
+                            <span class="class-badge" style="${classCount === 0 ? 'opacity: 0.5; filter: grayscale(1)' : ''}">
+                                ${classCount} clases
+                            </span>
+                            <button class="delete-btn" onclick="deleteGroup(${originalIndex})" title="Eliminar">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg>
+                            </button>
                         </div>
                     `;
                     grid.appendChild(card);
@@ -726,6 +736,7 @@
             start.setMonth(start.getMonth() - 10);
 
             let count = 0;
+            // Correctly get the last day of the specific month and year selected
             const daysInMonth = new Date(y, m + 1, 0).getDate();
 
             const dayMap = { 'LUNES': 1, 'MARTES': 2, 'MIERCOLES': 3, 'MIÉRCOLES': 3, 'JUEVES': 4, 'VIERNES': 5, 'SABADO': 6, 'SÁBADO': 6, 'DOMINGO': 0 };
