agegado modo inicio agregado tutorial para LogicLedger

--- a/board_grupos.html
+++ b/board_grupos.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Grupos | Audit Studio</title>
+    <title>LogicLedger | Gestión de Cohortes Dev</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Outfit:wght@500;700&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css" />
     <style>
         :root {
             --bg-body: #020617;
@@ -587,8 +588,19 @@
     <div class="container">
         <header>
             <div class="brand">
-                <h1>Registro de Grupos</h1>
-                <p>Gestión semanal de clases y horarios</p>
+                <h1>LogicLedger</h1>
+                <p>Gestión de cohortes y estudiantes de programación</p>
+            </div>
+            <div style="margin-left: auto; margin-right: 1.5rem;">
+                <a href="https://github.com/erazoandres/LogicLedger" target="_blank"
+                    style="color: var(--text-dim); text-decoration: none; display: flex; align-items: center; gap: 0.5rem; font-size: 0.8rem; font-weight: 500; transition: var(--transition);"
+                    onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='var(--text-dim)'">
+                    <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.041-1.416-4.041-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                    </svg>
+                    Ver en GitHub
+                </a>
             </div>
             <div class="header-actions">
                 <input type="file" id="jsonInput" accept=".json" style="display: none;" />
@@ -607,6 +619,9 @@
                         </path>
                     </svg>
                     Limpiar
+                </button>
+                <button class="btn-import" id="start-tutorial" title="Ver Tutorial">
+                    ❓
                 </button>
             </div>
         </header>
@@ -1112,6 +1127,92 @@
         document.getElementById('monthSelector').value = `${now.getFullYear()}-${(now.getMonth() + 1).toString().padStart(2, '0')}`;
 
         renderGroups();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
+    <script>
+        // Tutorial / Driver.js Logic
+        const driver = window.driver.js.driver;
+        const driverObj = driver({
+            showProgress: true,
+            animate: true,
+            steps: [
+                {
+                    element: '.brand',
+                    popover: {
+                        title: '📊 LogicLedger',
+                        description: '¡Bienvenido! Este es tu panel de control para el seguimiento de pagos y cohortes.',
+                        side: "bottom",
+                        align: 'start'
+                    }
+                },
+                {
+                    element: '.btn-import:not(.btn-danger):not(#start-tutorial)',
+                    popover: {
+                        title: '📥 Importar Datos',
+                        description: 'Carga tus grupos desde un archivo JSON para empezar a gestionar.',
+                        side: "bottom",
+                        align: 'end'
+                    }
+                },
+                {
+                    element: '.stats-grid',
+                    popover: {
+                        title: '💰 Estadísticas Mensuales',
+                        description: 'Visualiza el total de pagos para clases individuales y grupales del mes seleccionado.',
+                        side: "bottom",
+                        align: 'start'
+                    }
+                },
+                {
+                    element: '#monthSelector',
+                    popover: {
+                        title: '📅 Selector de Mes',
+                        description: 'Filtra los grupos y cálculos por mes y año para una auditoría precisa.',
+                        side: "right",
+                        align: 'start'
+                    }
+                },
+                {
+                    element: '#graduationSection',
+                    popover: {
+                        title: '🎓 Cierres de Mes',
+                        description: 'Aquí aparecerán los grupos que finalizan sus clases en el mes seleccionado.',
+                        side: "bottom",
+                        align: 'start'
+                    }
+                },
+                {
+                    element: '#groupsGrid',
+                    popover: {
+                        title: '📋 Lista de Grupos',
+                        description: 'Tus grupos organizados por día. Cada tarjeta muestra el nombre, horario y pago calculado.',
+                        side: "top",
+                        align: 'start'
+                    }
+                },
+                {
+                    element: '#start-tutorial',
+                    popover: {
+                        title: '💡 Tutorial',
+                        description: 'Puedes repetir este recorrido en cualquier momento haciendo clic aquí.',
+                        side: "bottom",
+                        align: 'end'
+                    }
+                }
+            ]
+        });
+
+        document.getElementById('start-tutorial').onclick = () => {
+            driverObj.drive();
+        };
+
+        // Render on first load
+        setTimeout(() => {
+            if (!localStorage.getItem('logicledger_visited')) {
+                driverObj.drive();
+                localStorage.setItem('logicledger_visited', 'true');
+            }
+        }, 1000);
     </script>
 </body>
 
