mejoras en integracion

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
     <main>
         <div class="center-grid">
-            <a href="board_grupos.html" class="action-module">
+            <a href="LogicLedger.html" class="action-module">
                 <span class="module-id">01 / Statistics Engine</span>
                 <div class="module-icon">
                     <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -361,7 +361,7 @@
                 <div class="module-decor" style="background: var(--accent-primary);"></div>
             </a>
 
-            <a href="index.html" class="action-module">
+            <a href="AuditStudio.html" class="action-module">
                 <span class="module-id">02 / Management Portal</span>
                 <div class="module-icon">
                     <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
