--- a/AuditStudio.html
+++ b/AuditStudio.html
@@ -144,7 +144,85 @@
             display: none;
         }
 
-        /* Sidebar navigation */
+        /* Super Modern Notifications (Glassmorphism + Neon) */
+        .notification-container {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 10000;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            pointer-events: none;
+        }
+
+        .notification {
+            background: rgba(10, 10, 10, 0.7);
+            backdrop-filter: blur(20px) saturate(180%);
+            -webkit-backdrop-filter: blur(20px) saturate(180%);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #fff;
+            padding: 18px 28px;
+            border-radius: 24px;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.6), inset 0 0 0 1px rgba(255, 255, 255, 0.05);
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            min-width: 320px;
+            transform: translateX(120%) scale(0.9);
+            transition: all 0.7s cubic-bezier(0.34, 1.56, 0.64, 1);
+            pointer-events: auto;
+            position: relative;
+            overflow: hidden;
+            font-family: 'Outfit', sans-serif;
+        }
+
+        .notification.active {
+            transform: translateX(0) scale(1);
+        }
+
+        .notification.success {
+            border-left: 3px solid var(--accent);
+        }
+
+        .notification.error {
+            border-left: 3px solid #ef4444;
+        }
+
+        .notification-icon {
+            font-size: 1.5rem;
+            filter: drop-shadow(0 0 10px var(--accent-soft));
+        }
+
+        .notification-message {
+            font-size: 0.95rem;
+            font-weight: 700;
+            letter-spacing: -0.3px;
+        }
+
+        /* Modern Progress Bar */
+        .notification-progress {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 4px;
+            background: linear-gradient(90deg, var(--accent), #ec4899);
+            width: 100%;
+            transform-origin: left;
+            animation: progress-shrink 4s linear forwards;
+            opacity: 0.8;
+        }
+
+        @keyframes progress-shrink {
+            from {
+                transform: scaleX(1);
+            }
+
+            to {
+                transform: scaleX(0);
+            }
+        }
+
         /* Sidebar navigation - Compacted */
         aside {
             width: 250px;
@@ -2136,6 +2214,9 @@
         const driverObj = driver({
             showProgress: true,
             animate: true,
+            onDestroyed: () => {
+                autoLoadDefaultData();
+            },
             steps: [
                 {
                     element: '.brand-group',
@@ -2253,15 +2334,9 @@
         async function init() {
             initTheme();
             checkUploadPrompt();
-            try {
-                const res = await fetch('data.csv');
-                if (!res.ok) throw new Error("No data.csv found");
-                const text = await res.text();
-                parse(text);
-            } catch (err) {
-                console.warn("Initial data load skipped:", err);
-                checkUploadPrompt();
-            }
+            // Eliminada la carga automática de data.csv para iniciar vacío
+            registry = [];
+            renderGrid();
         }
 
         function checkUploadPrompt() {
@@ -2558,6 +2633,7 @@
 
         function showNotification(message, type = 'success') {
             const container = document.getElementById('notification-container');
+            container.innerHTML = ''; // Limpiamos para asegurar que solo haya una
             const toast = document.createElement('div');
             toast.className = `notification ${type}`;
 
@@ -2566,6 +2642,7 @@
             toast.innerHTML = `
                 <span class="notification-icon">${icon}</span>
                 <span class="notification-message">${message}</span>
+                <div class="notification-progress"></div>
             `;
 
             container.appendChild(toast);
@@ -2576,7 +2653,7 @@
             // Remove after 4s
             setTimeout(() => {
                 toast.classList.remove('active');
-                setTimeout(() => toast.remove(), 400);
+                setTimeout(() => toast.remove(), 700);
             }, 4000);
         }
 
@@ -2689,6 +2766,31 @@
         // Check on load and resize
         checkMobileView();
         window.addEventListener('resize', checkMobileView);
+
+        let isDataLoaded = false;
+        async function autoLoadDefaultData() {
+            if (isDataLoaded) return;
+            isDataLoaded = true;
+
+            console.log("Starting 1s delay before auto-load...");
+            await new Promise(resolve => setTimeout(resolve, 1000));
+
+            try {
+                showNotification("Cargando datos de prueba...", "success");
+                console.log("Waiting 2s after notification...");
+                await new Promise(resolve => setTimeout(resolve, 2000));
+
+                console.log("Fetching datos_prueba.csv...");
+                const res = await fetch('datos_prueba.csv');
+                if (!res.ok) throw new Error("No datos_prueba.csv found");
+                const text = await res.text();
+                parse(text);
+                console.log("Auto-load successful.");
+            } catch (err) {
+                console.error("Auto-load failed:", err);
+                isDataLoaded = false;
+            }
+        }
 
         init();
         showCredits();
