--- a/LogicLedger.html
+++ b/LogicLedger.html
@@ -300,6 +300,85 @@
             border: 1px solid rgba(56, 189, 248, 0.1);
         }
 
+        /* Super Modern Notifications (Glassmorphism + Neon) */
+        .notification-container {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 10000;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            pointer-events: none;
+        }
+
+        .notification {
+            background: rgba(10, 10, 10, 0.7);
+            backdrop-filter: blur(20px) saturate(180%);
+            -webkit-backdrop-filter: blur(20px) saturate(180%);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #fff;
+            padding: 18px 28px;
+            border-radius: 24px;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.6), inset 0 0 0 1px rgba(255, 255, 255, 0.05);
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            min-width: 320px;
+            transform: translateX(120%) scale(0.9);
+            transition: all 0.7s cubic-bezier(0.34, 1.56, 0.64, 1);
+            pointer-events: auto;
+            position: relative;
+            overflow: hidden;
+            font-family: 'Outfit', sans-serif;
+        }
+
+        .notification.active {
+            transform: translateX(0) scale(1);
+        }
+
+        .notification.success {
+            border-left: 3px solid var(--accent);
+        }
+
+        .notification.error {
+            border-left: 3px solid #ef4444;
+        }
+
+        .notification-icon {
+            font-size: 1.5rem;
+            filter: drop-shadow(0 0 10px var(--accent-soft));
+        }
+
+        .notification-message {
+            font-size: 0.95rem;
+            font-weight: 700;
+            letter-spacing: -0.3px;
+        }
+
+        /* Modern Progress Bar */
+        .notification-progress {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 4px;
+            background: linear-gradient(90deg, var(--accent), #ec4899);
+            width: 100%;
+            transform-origin: left;
+            animation: progress-shrink 4s linear forwards;
+            opacity: 0.8;
+        }
+
+        @keyframes progress-shrink {
+            from {
+                transform: scaleX(1);
+            }
+
+            to {
+                transform: scaleX(0);
+            }
+        }
+
         .payment-badge {
             background: rgba(16, 185, 129, 0.1);
             color: var(--success);
@@ -865,7 +944,7 @@
         const importPreviewBody = document.getElementById('importPreviewBody');
         const importCount = document.getElementById('importCount');
 
-        let groups = JSON.parse(localStorage.getItem('audit_groups')) || [];
+        let groups = []; // Forzamos inicio vacío para limpieza total
         let pendingGroups = [];
 
         function saveGroups() {
@@ -1295,6 +1374,7 @@
 
         renderGroups();
     </script>
+    <div id="notification-container" class="notification-container"></div>
     <!-- Welcome Modal -->
     <div class="credits-overlay" id="credits-modal">
         <div class="credits-card">
@@ -1326,6 +1406,9 @@
         const driverObj = driver({
             showProgress: true,
             animate: true,
+            onDestroyed: () => {
+                autoLoadDefaultData();
+            },
             steps: [
                 {
                     element: '.brand',
@@ -1412,6 +1495,62 @@
                 driverObj.drive();
             }, 400);
         };
+
+        function showNotification(message, type = 'success') {
+            const container = document.getElementById('notification-container');
+            container.innerHTML = ''; // Solo una notificación a la vez
+            const toast = document.createElement('div');
+            toast.className = `notification ${type}`;
+            const icon = type === 'success' ? '✅' : '❌';
+            toast.innerHTML = `
+                <span class="notification-icon">${icon}</span>
+                <span class="notification-message">${message}</span>
+                <div class="notification-progress"></div>
+            `;
+            container.appendChild(toast);
+            setTimeout(() => toast.classList.add('active'), 100);
+            setTimeout(() => {
+                toast.classList.remove('active');
+                setTimeout(() => toast.remove(), 700);
+            }, 4000);
+        }
+
+        let isDataLoaded = false;
+        async function autoLoadDefaultData() {
+            if (isDataLoaded) return;
+            isDataLoaded = true;
+
+            // Limpiamos los datos actuales para que la carga se sienta real
+            groups = [];
+            renderGroups();
+
+            await new Promise(resolve => setTimeout(resolve, 1000));
+
+            try {
+                showNotification("Cargando datos de prueba...", "success");
+                await new Promise(resolve => setTimeout(resolve, 2000));
+                console.log("Fetching groups.json...");
+
+                const res = await fetch('groups.json');
+                if (!res.ok) throw new Error("No groups.json found");
+                const data = await res.json();
+
+                // Mapeo de campos para compatibilidad (especialmente 'fecha final' -> 'fecha_final')
+                groups = data.map(item => ({
+                    nombre: item.nombre || "(Sin nombre)",
+                    originalDia: item.dia || "LUNES",
+                    fecha: item.fecha || "",
+                    fecha_final: item["fecha final"] || item.fecha_final || "2026-12-31",
+                    hora: normalizeTime(item.hora || "12:00 PM")
+                }));
+
+                saveGroups();
+                console.log("Auto-load successful in LogicLedger.");
+            } catch (err) {
+                console.error("Auto-load failed in LogicLedger:", err);
+                isDataLoaded = false;
+            }
+        }
 
         // Initialize
         showCredits();
